# ignis

./: CMakeLists.txt  README.md  input.yaml
docker/: Dockerfile
docs/: Doxyfile  extra-stuff.sty  mainpage.md  refs.bib
docs/pages/: 1_diffusion.md  2_premixed.md  3_diffusion_table.md  4_flamelet.md
input/: c2h4det.yaml  c2h4red.yaml  chem.inp  input_diffusion.yaml  input_diffusion_table.yaml  input_flamelet.yaml  input_flamelet_table.yaml  input_premixed.yaml
src/: CMakeLists.txt  driver.cc  driver_diffusion.cc  driver_diffusion_table.cc  driver_flamelet.cc  driver_flamelet_table.cc  driver_premixed.cc  flame.cc  flame.h  fuego.cc  fuego.h  ignis.cc  ignis.h  integrator_cvode.h  linearInterp.h  main.cc  solver_kinsol.h  streams.cc  streams.h
